k8s/apps/metacubexd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: cwx
  name: metacubexd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: metacubexd
  template:
    metadata:
      labels:
        app: metacubexd
    spec:
      restartPolicy: Always
      containers:
        - name: metacubexd
          image: harbor.chenwx.top/ghcr.io/metacubex/metacubexd:latest
          ports:
            - containerPort: 80
              protocol: TCP
