k8s/apps/metacubexd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: metacubexd
  namespace: cwx
spec:
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: metacubexd
