k8s/apps/metacubexd/IngressRoute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: metacubexd
  namespace: cwx
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`metacubexd.chenwx.top`)
      kind: Rule
      services:
        - name: metacubexd
          namespace: cwx
          port: 80
